[tool.poetry]
name = "hyacinth"
version = "0.3.0"
description = "Python HTTP Client library for the Clio Manage API"
authors = ["Anson MacKeracher <anson@legalmate.co>", "Nick Francis <nick@legalmate.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Authlib = "^1.2.0"
requests = "^2.28.2"
poethepoet = "^0.19.0"
pytest = "^7.3.1"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
httpx = "^0.24.0"
aiofiles = "^23.1.0"
sphinx = "^7.0.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
bandit = "^1.7.4"
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.1"

[tool.poe.tasks]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
